modal scrollbar bug fix

--- a/src/css/components/home-component.css
+++ b/src/css/components/home-component.css
@@ -1,7 +1,4 @@
 @import url("../../fonts/bower.css");
-.hmc-container {
-}
-
 .hmc-header {
   width: 100%;
   margin: 0;
@@ -64,7 +61,7 @@
 }
 .hmc-header .hmc-header-images {
   text-align: center;
-  padding: 0 60px;
+  padding: 0 2vw;
 }
 
 .hmc-header {
