--- a/src/css/components/navbar-dropdown.css
+++ b/src/css/components/navbar-dropdown.css
@@ -16,6 +16,7 @@
   line-height: 1.3;
   font-size: 13.33px !important;
   padding: 20px;
+  margin-right: 1vw;
   max-width: 1090px;
 }
 
@@ -41,7 +42,7 @@
   font-size: 16px !important;
   color: black;
   text-decoration: none;
-  padding: 14px 0;
+  padding: 19px 0;
   margin: 0;
   font-weight: 300;
   align-content: center;
